--- a/src/assets/css/Todolist.css
+++ b/src/assets/css/Todolist.css
@@ -1,24 +1,107 @@
+/* 头部 */
 header {
-    background: #000;
-    text-align: center;
+    background: rgba(47,47,47,0.98);
     color: #fff;
-    height: 40px;
-    padding: 15px;
+    height: 50px;
 }
 
+header div {
+    width: 600px;
+    margin: auto;
+}
+header label {
+    float: left;
+    width: 100px;
+    line-height: 50px;
+    color: #DDD;
+    font-size: 24px;
+    cursor: pointer;
+}
+header input {
+    float: right;
+    width: 60%;
+    height: 24px;
+    margin-top: 12px;
+    text-indent: 10px;
+    border-radius: 5px;
+    box-shadow: 0 1px 0 rgba(255,255,255,0.24), 0 1px 6px rgba(0,0,0,0.45) inset;
+    border: none;
+}
+
+
+/* 去除li标签的小圆点 */
+.doingList li{
+    width: 100%;
+    height: 32px;
+    list-style-type: none;
+    position: relative;
+    background-color: #FFF;
+    margin-bottom: 10px;
+    border-radius: 3px;
+    border-left: 4px solid #629a6c;
+}
+.doingList .nextLi {
+    border-left: 4px solid #999;
+    opacity: 0.5;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+}
+.doingList {
+    padding-left: 0;
+}
+.count {
+    float: right;
+    top:2px;
+    display: inline-block;
+    padding: 0 5px;
+    height: 20px;
+    border-radius: 20px;
+    background: #E6E6FA;
+    line-height: 22px;
+    text-align: center;
+    color: #666;
+    font-size: 14px;
+    font-weight: bold;
+
+}
+li input {
+    margin-left: 10px;
+    margin-top: 5px;
+    width: 20px;
+    height: 20px;
+}
+li span {
+    position: absolute;
+    top: 4px;
+}
+button {
+    position: absolute;
+    display: inline-block;
+    right: 3px;
+    top: 4px;
+    padding: 0 4px;
+    height: 20px;
+    border-radius: 50%;
+    border: 6px double #FFF;
+    background: #CCC;
+    line-height: 14px;
+    color: #FFF;
+    cursor: pointer;
+}
+/* 页脚 */
 footer {
     color: grey;
     font-size: 14px;
-}
-
-div {
     text-align: center;
 }
-
-.doingList li{
-    list-style-type: none;
-}
-
-footer div {
+footer span {
     cursor: pointer;
 }
+
+.subDiv {
+    width: 600px;
+    margin: auto;
+}
+html {
+    background: #CDCDCD;
+}
+
